# tariff_trade_analysis

./: .gitignore  README.md  pyproject.toml
docs/: planning.md
documents/: PANEL_REGRESSION_WRITEUP.qmd  PANEL_REGRESSION_WRITEUP.quarto_ipynb  effects_of_trade_diversion.qmd  references.bib
notebook_outputs/: HM Regression Replication.html  Results Summary May.html
notebooks/__marimo__/session/: pyfixest_testing.py.json
notebooks/dev/: CEPI_BACI.py  MATCHING.py  NETWORK.py  WITS_API.py  WITS_PREF_EXPLORE.py
notebooks/dev2/explore/: EXPLORE_UNIFIED.py
notebooks/dev2/network/: NETWORK_ANALYSIS.py
notebooks/dev2/new_tariff_dataset/: TETI_TARIFFS.py
notebooks/dev2/tariff_regression/: tariff_regression_effect_OLD.py
notebooks/dev2/visualise/: tariff_regression_effect.py
notebooks/dev3/: HM_REGRESSION_REPLICATION.py  IMPROVING_HM_REGRESSIONS.py
notebooks/dev4/: PANEL_REGRESSIONS.py  PANEL_REGRESSIONS_REFINEMENT.py  PANEL_REGRESSION_WRITEUP.py
notebooks/dev5/: control_groups.ipynb  regression_plots.ipynb  regression_setup.ipynb  run_regression.py
src/mpil_tariff_trade_analysis/: analysis_pipeline.py  app.py  etl_pipeline.py  pipeline.py
src/mpil_tariff_trade_analysis/analysis/: DETREND_PIPELINE.py  DIRECT_EFFECTS.py  RESULTS_SUMMARY_MAY.py
src/mpil_tariff_trade_analysis/dev/: CEPI_BACI.py  MATCHING.py  NETWORK.py  WITS_API.py  WITS_PREF_EXPLORE.py
src/mpil_tariff_trade_analysis/dev2/: BACI_PIPELINE.py  EXPLORE_UNIFIED.py  MERGING_PIPELINE.py  WITS_MFN_PIPELINE.py
src/mpil_tariff_trade_analysis/etl/: baci.py  (+16 more)
tests/: test_etl_data_integrity.py
(+54 files in other folders)
