[project]
description = "Tariff and trade analysis for MPIL"
name = "mpil_tariff_trade_analysis"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "duckdb>=1.2.2", # Added duckdb
    "marimo>=0.12.6",
    "polars>=1.27.0",
    "pyarrow>=19.0.1",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
    "world-trade-data>=0.1.1",
    "pandas>=2.0.0", # Added pandas explicitly as it's used in helpers
    "altair>=5.5.0",
    "networkx>=3.4.2",
    "plotly>=6.0.1",
    "pycountry>=24.6.1",
    "ydata-profiling>=4.16.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "mpil-tariff-trade-analysis",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "ruff>=0.8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "dev", "utils"]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "uv"

[tool.uv.sources]
mpil-tariff-trade-analysis = { workspace = true }
